--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,7 @@
                     <ul class="list-unstyled">
                         <li><a href="">About</a></li>
                         <li><a href="">Highlights</a></li>
-                        <li><a href="">Investor</</a>li>
+                        <li><a href="">Investor</a></li>
                         <li><a href="">Partners</a></li>
                     </ul>
                 </div>
